test/Fail/Issue2854.err
Issue2854.agda:10.11-15: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2854.agda:10.11-15
